# mcbe-ws-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml  release.yml
.superpowers/sdd/: task-4-report.md  task-6-report.md  task-7-report.md  task-8-report.md
addon/: .env  .env.example  .gitignore  README.md  README.zh.md  eslint.config.mjs  just.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vitest.config.ts
addon/scripts/: bootstrap.ts  main.ts  runtime-globals.d.ts
addon/tests/: capabilities.test.ts  chunking.test.ts  main.test.ts  manifest.test.ts  responseSync.test.ts  router.test.ts  test-baseline.test.ts
docs/: PLAN.md  PRD.md  addon-bridge-protocol.md  addon-bridge-protocol.zh.md  architecture.md  architecture.zh.md  batch-d-scope.md  getting-started.md  getting-started.zh.md  index.md  index.zh.md  multiplayer-tellraw-origin-fix-plan.md  reference.md  reference.zh.md
docs/reviews/: 2026-07-19-sdk-code-review.md  2026-07-20-full-project-code-review.md  2026-07-20-sdk-architecture-review.md  2026-07-20-sdk-fix-plan.md
docs/spec/: 2026-07-18-ws-sdk-design.md  2026-07-20-protocol-namespace-redesign.md
examples/addon-capability-call/: README.md  capability_call.py
examples/addon-server/: README.md  README.zh.md  server.py
examples/addon-ts/: README.md  bootstrap.ts  chunk.ts  constants.ts  handler.ts
examples/basic-server/: README.md  README.zh.md  server.py
examples/capability-greeting/: README.md  greeting.py
src/mcbe_ws_sdk/: __init__.py  _logging.py  config.py  errors.py  logging.py  py.typed
tests/: conftest.py
tests/fixtures/: legacy_mcbeai_v1_vectors.json
tests/release/: conftest.py  test_distribution.py  (+2 more)
tools/: check_dist.py  check_protocol_names.py  check_release_tag.py  format.py
(+72 files in other folders)
