[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcbe-ws-sdk"
version = "0.1.0"
description = "Generic WebSocket gateway SDK for Minecraft Bedrock Edition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "mcbe-ws-sdk contributors" }]
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "websockets>=12,<17",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "PyYAML>=6,<7",
    "types-PyYAML>=6,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcbe_ws_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcbe_ws_sdk",
    "tests",
    "examples",
    "addon/scripts",
    "addon/behavior_packs/mc-ws-sdk/manifest.json",
    "addon/behavior_packs/mc-ws-sdk/pack_icon.png",
    "addon/resource_packs/mc-ws-sdk/manifest.json",
    "addon/resource_packs/mc-ws-sdk/pack_icon.png",
    "addon/package.json",
    "addon/package-lock.json",
    "addon/tsconfig.json",
    "addon/tsconfig.test.json",
    "addon/vitest.config.ts",
    "addon/README.md",
    "addon/README.zh.md",
    "README.md",
    "README.zh.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "docs/reviews/**",
    "docs/superpowers/**",
    "**/node_modules/**",
    "**/lib/**",
    "**/dist/**",
    "**/.env",
    "**/*.log",
    "**/logs/**",
    "**/__pycache__/**",
    "**/*.pyc",
    ".mypy_cache/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
